--- a/index.html
+++ b/index.html
@@ -14,17 +14,21 @@
 			<div class="btn-line"></div>
 			<div class="btn-line"></div>
 		</div>
-	<div id="first">
+	<div class="card" id="first">
 		<h2>House Stark</h2>
 		<img src="https://vignette.wikia.nocookie.net/gameofthrones/images/8/8a/House-Stark-Main-Shield.PNG/revision/latest?cb=20170101103142">
 	</div>
-    <div id="second">
+    <div class="card" id="second">
     	<h2>House Lannister</h2>
     	<img src="https://vignette.wikia.nocookie.net/gameofthrones/images/8/8a/House-Lannister-Main-Shield.PNG/revision/latest?cb=20170101095357">
     </div>
-	<div id="third">		
+	<div class="card" id="third">		
 		<h2>House Targaryen</h2>
 		<img src="https://vignette.wikia.nocookie.net/gameofthrones/images/4/43/House-Targaryen-Main-Shield.PNG/revision/latest?cb=20181113055101">						
+	</div>
+	<div class="card" id="fourth">		
+		<h2>House Martell</h2>
+		<img src="https://vignette.wikia.nocookie.net/gameofthrones/images/7/7e/House-Martell-Main-Shield.PNG/revision/latest?cb=20170523024859">						
 	</div>
 
 
